2006-07-18  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): No longers adds default groups
	to the manager.

2006-07-17  Phil Muldoon  <pmuldoon@redhat.com>

	* test/TestIconManager.java: New File.

2006-07-17  Tim Moore  <moore@redhat.com>

	* register/RegisterWindow.java (cols): Add column for BigInteger value
	of a register.
	(setTask): Initialize value of registers as a BigInteger, not the
	string representation of a long.
	(signExtend): delete
	(refreshList): Derive all columns from the BigInteger value.
	(swizzleByteOrder, saveBinaryValue(BigInteger, TreePath)): new methods
	(writeBinaryValue): new method
	(DecCellListener::cellRendererTextEvent,
	 HexCellListener::cellRendererTextEvent,
	 OctCellListener::cellRendererTextEvent, 
	 BinCellListener::cellRendererTextEvent): Update the BigInteger
	register value.

2006-07-17  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java (MemoryWindow): Fixed a static counter
	increment bug.

2006-07-17  Rick Moseley  <rmoseley@redhat.com>

	* glade/procpop.glade: Change window name for "Observers Detail" to
	"Custom Observers Detail" for more consistency.

2006-07-17  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java (recalculate): Finished endianness conversion
	with BigInteger.
	(rowAppend): Added code for right alignment in the tree rows.

2006-07-14  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java: Removed some redundant imports and methods.
	(DecCellListener): Removed.
	(HexCellListener): Ditto.
	(OctCellListener): Ditto.
	(BinCellListener): Ditto.
	(signExtend): Ditto.
	(saveBinaryValue): Ditto.
	(diss): Added - Disassembler object for retrieving instructions from the
	current task's memory space.
	(setTask): Initializes above Disassembler object.
	(recalculate): Removed more redundant code.
	(refreshList): Retrieve instructions from Disassembler and display in 
	the MemoryWindow columns, in conjunction with the other memory words.
	