@@ -1,3 +1,7 @@
+2006-07-18  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* test/TestIconManager.java: Apply GNU format.
+
 2006-07-18  Adam Jocksch  <ajocksch@redhat.com>
 
 	* Gui.java (initializePreferences): No longers adds default groups
